[package]
name = "woosh"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.7.2"
prost = "0.10.4"
prost-types = "0.10.1"
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
futures = { version = "0.3.21", default-features = false, features = ["alloc"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
hex = "0.4.3"
log = { version = "0.4.17", features = ["std", "serde"] }
env_logger = "0.9.0"
clap = { version = "3.2.13", features = ["derive"] } # Command line args
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}

# TODO: Add prometheus metrics
# prometheus-client = "0.17.0"


[[bin]] # Bin to run the woosh grpc server
name = "woosh-server"
path = "src/woosh.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "woosh-client"
path = "src/client.rs"

[build-dependencies]
tonic-build = "0.7.2"